# AgentForgeCryptoArbitratge

./: .env  README.md  pyproject.toml  settings.json
agentforge/: __init__.py  config.py  main.py  models.py
agentforge/alerts/: telegram.py
agentforge/api/: __init__.py  coingecko.py
agentforge/core/: __init__.py  arbitrage.py  monitor.py
agentforge/exchanges/: __init__.py  binance.py  bybit.py  coinbase.py  gateio.py  kraken.py  okx.py  symbols.py
agentforge/web/: app.py  arbitrage_web.py
agentforge/web/static/: app.js  style.css
agentforge/web/templates/: dashboard.html  settings.html
agents/: checker.md  coder.md  dev-lead-1.md  dev-lead-2.md  gm.md  researcher.md
tests/: test_arbitrage.py  test_monitor.py
